syntax = "proto3";

package rpc;

service AccessServerRPC {
    rpc SendP2PMsgFromJob (ASSendP2PMsgFromJobReq) returns (ASSendP2PMsgFromJobRes) {}
    //rpc SendGroupMsg (ASSendGroupMsgReq) returns (ASSendGroupMsgRes) {}
}

message ASSendP2PMsgReq {
    int64  sourceUID = 1;
    int64  targetUID = 2;
    string msgID     = 3;
    string msg       = 4;
}

message ASSendP2PMsgRes {
    uint32 errCode = 1;
    string errStr  = 2;
}

message ASSendP2PMsgFromJobReq {
    int64  sourceUID        = 1;
    int64  targetUID        = 2;
    string msgID            = 3;
    string msg              = 4;
    string accessServerAddr = 5;
}

message ASSendP2PMsgFromJobRes {
    uint32 errCode = 1;
    string errStr  = 2;
}

message ASSendGroupMsgReq {
    int64  groupID   = 1;
    string msgID     = 2;
    string msg       = 3;
}

message ASSendGroupMsgRes {
    uint32 errCode = 1;
    string errStr  = 2;
}